@@ -408,3 +408,4 @@ Changelog:
                 Fixed respond command failing due to being called on separate thread.
     4.0.0
                 Upgrade compile target to Java 8.
+                Upgrade bstats-bukkit from 1.8 to 2.2.1.
